--- a/Prueba Index/index.html
+++ b/Prueba Index/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Formulario Hind</title>
 </head>
 <body>
     <h1>Formulario de Entrada al País</h1>
+
 
 <form action="" method="get">
 <p>
